--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-
 	<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
-
-		<head>
-
-			<title>Front Range Community College</title>
-
+		<head
+			<title>Front Range Community College - weblab</title>
 			<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
 		</head>
-
 		<body>
-
 			<h1 id="title">Click Me!</h1>
-
 			<input id="autocomplete"></input>
 
-
-
 			<ul id="result">
-
 			</ul>
-
-
 
 			<script>
 
